[gd_scene load_steps=4 format=3 uid="uid://be1dxpeng5d1p"]

[ext_resource type="PackedScene" uid="uid://b6m2yqgfhvvmp" path="res://demos/combat-logic/CombatLogicDemo.tscn" id="1_08gcm"]
[ext_resource type="Script" path="res://demos/combat-timing/SimpleGameOverHandler.gd" id="2_k0qlv"]
[ext_resource type="Script" path="res://src/combat/CombatSequencer.gd" id="2_yapv5"]

[node name="CombatTimingDemo" instance=ExtResource("1_08gcm")]

[node name="SimpleGameOverHandler" type="Node" parent="." index="0"]
script = ExtResource("2_k0qlv")

[node name="CombatSequencer" type="Node" parent="." index="1"]
script = ExtResource("2_yapv5")

[connection signal="combat_finished" from="CombatSequencer" to="TextController" method="_on_combat_finished"]
[connection signal="combat_finished" from="CombatSequencer" to="Enemy" method="_on_combat_finished"]
[connection signal="combat_finished" from="CombatSequencer" to="Player" method="_on_combat_finished"]
[connection signal="combat_started" from="CombatSequencer" to="TextController" method="_on_combat_started"]
[connection signal="enemy_impact" from="CombatSequencer" to="Enemy" method="_on_enemy_impact"]
[connection signal="gameover_defeat_finished" from="CombatSequencer" to="SimpleGameOverHandler" method="_on_gameover_finished"]
[connection signal="gameover_defeat_started" from="CombatSequencer" to="SimpleGameOverHandler" method="_on_gameover_defeat_started"]
[connection signal="gameover_victory_finished" from="CombatSequencer" to="SimpleGameOverHandler" method="_on_gameover_finished"]
[connection signal="gameover_victory_started" from="CombatSequencer" to="SimpleGameOverHandler" method="_on_gameover_victory_started"]
[connection signal="player_impact" from="CombatSequencer" to="TextController" method="_on_player_impact"]
[connection signal="word_submitted" from="TextController" to="Player" method="_on_word_submitted"]
[connection signal="player_ready_to_act" from="Player" to="CombatSequencer" method="_on_player_ready_to_act"]
[connection signal="enemy_defeated" from="Enemy" to="CombatSequencer" method="_on_enemy_defeated"]
[connection signal="player_defeated" from="Player" to="CombatSequencer" method="_on_player_defeated"]
